Collect time series
* Add in the data module, NSER, ESER, MSER for time series.
* Fixed a bug in SET_BETA. Previously SET_BETA only update KLST, but
ACTION is also changed with beta, so also need to recalculate ACTION,
however HIST is not change.
* The previous NAN flag system for action is way too confusing, the
feature is remove in this update. Model class also modified accordingly.

--- a/MonteCarlo.ipynb
+++ b/MonteCarlo.ipynb
@@ -539,9 +539,9 @@
     "       +- MC.data.spins[:dof,:nspin] ===>   Model.data[spins] -+  |\n",
     "       |                                    Model.data[steps] -+  |\n",
     "       |                                         Model.series[:] -+\n",
-    "       +- MC.data.nser               ===>    Model.nser       -+\n",
-    "       +- MC.data.eser[:nseq]        ===>    Model.eser       -+\n",
-    "       +- Mc.data.mser[:dof,:nseq]   ===>    Model.mser       -+"
+    "       +- MC.data.nts                ===>    Model.nts        -+\n",
+    "       +- MC.data.ets[:nts]          ===>    Model.ets        -+\n",
+    "       +- Mc.data.mts[:dof,:nts]     ===>    Model.mts        -+"
    ]
   },
   {
@@ -551,10 +551,10 @@
     "Notes:\n",
     "- The `Model` attributes *do not physically exist*. They are accessed by `getattr` and `setattr` methods. The system and state attributes can be set as a whole by passing the dictionary. The data attributs are read only, setting `Model.data` will not affect the variables in the MC module.\n",
     "- `Model` object provides **state parameter parsing**.\n",
-    "  - `action='unknown','nan'`: set `action` to nan (which is a flag telling MC that the energy has not be calculated yet).\n",
+    "  - `action='unknown'`: call `get_action()` to initialize.\n",
     "  - `beta='default'`: set `beta` = 1.\n",
     "  - `config='FM','uniform'`: initialize with 0's; `'PM','random'`: initialize with random spins from `range(dof)`.\n",
-    "  - `hist='unknown'`: set `hist` to empty with `hist[0]=-1` (which is a flag telling MC that the histogram has not been collected yet).\n",
+    "  - `hist='unknown'`: allocate `hist` and then call `get_hist()` to initialize.\n",
     "- When attribute getter is called to get `action` and `hist`, it is first checked whether they have been calculated, if not, will evoke MC module (by calling `MC.core.get_action()` or `.get_hist()`) to calculate and then return.\n",
     "- `MC.core.dump()` and `MC.core.load()` can be called to dump/load core variables.\n",
     "- `MC.core.seed(x)` seed the random number generator by `x`."
@@ -566,9 +566,7 @@
    "source": [
     "#### Methods\n",
     "\n",
-    "`Model.run(steps, mode)` runs the MC updates for specific `steps`, under the `mode`:\n",
-    "- `mode = 0` (default): update without keeping track of the `action` and `hist`.\n",
-    "- `mode = 1`: `action` and `hist` are updated with the MC run at every spin flip.\n",
+    "`Model.run(steps)` just runs the MC updates for specific `steps`.\n",
     "\n",
     "`Model.measure(step, monitor)` runs MC updates for specific `steps`, and returns the measurement on the samples of:\n",
     "- energy density 1st and 2nd moment: $\\langle e\\rangle$, $\\langle e^2\\rangle$ (where $e=S/(\\beta N)$ is the energy density over all sites including the boundary).\n",
@@ -576,6 +574,219 @@
     "  - the 2nd moment $\\langle m^2\\rangle$ is a matrix, containing infomations of cross correlation.\n",
     "- specific spins (averged over samples), spin indices are specified by <code>monitor</code>, and the number of spin to monitor is specified by <code>nspin</code>.\n",
     "- the number of steps (samples) is also returned, such that the data can be combined with previous measurements properly, as weighted by the number of samples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "%run 'MonteCarlo.py'\n",
+    "mdl = LatticeModel(SquareLattice(32,[1.]),Group(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 498,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#mdl.beta = 0.0001\n",
+    "#MC.core.run(10)\n",
+    "mdl.beta = 0.8\n",
+    "MC.data.collect(10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 431,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYwAAAD7CAYAAAB5aaOHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAG8xJREFUeJzt3XucFfV9//H3xwA/WxMN2gjGC1qTaDTRqC1eGzfxBuZi\nTBMvTUNC08TGmGA0CiZW18Y2gE395aJYVCJGETSJDcZLgOpatXIRxVsAUVRAYcUbsHhhYT/94zvj\nzLnudzlnz+66r+fjMY+dy3dmvvM9c+Y9Z86Br7m7AADozDY9XQEAQN9AYAAAohAYAIAoBAYAIAqB\nAQCIQmAAAKIM6OkKFDMzfucLAF3k7tbd++iVnzDcncFdF198cY/XoTcMtANtQVtUHxqlVwYGAKD3\nITAAAFEIjF6sqampp6vQK9AOGdoiQ1s0njXy+VcMM/PeVicA6M3MTN5fv/QGAPQ+BAYAIAqBAQCI\nQmAAAKIQGACAKAQGACAKgQEAiEJgAACi1CUwzOxaM2s1s8eqlPm5mS0zs0Vm9ol67BcA0Dj1+oTx\nK0knVFpoZiMl7e3uH5Z0hqSr6rRfAECD1CUw3P1+Sa9VKXKSpOuTsvMk7WBmQ+qxbwBAYzTqO4xd\nJa3MTb+QzAMA9BG9rsc9SWpubn5nvKmpif+VEgByWlpa1NLS0vD91u1/qzWzYZJuc/cDyiy7StI9\n7j4jmV4i6Wh3by1Tlv+tFgC6oC/+b7WWDOXMlDRKkszsMEmvlwsLAEDvVZdHUmY2TVKTpJ3MbIWk\niyUNkuTuPtnd7zCzE83saUkbJY2ux34BAI1DB0oA0Mf1xUdSAIB3MQIDABCFwAAARCEwAABRCAwA\nQBQCAwAQhcAAAEQhMAAAUQgMAEAUAgMAEIXAAABEITAAAFEIDABAFAIDABCFwAAARCEwAABRCAwA\nQBQCAwAQhcAAAEQhMAAAUQgMAEAUAgMAEIXAAABEITAAAFEIDABAFAIDABCFwAAARCEwAABRCAwA\nQBQCAwAQhcAAAEQhMAAAUQgMAEAUAgOaNEl65pmerkX9/eIX0o9/3NO12DqzZ0t///c9XYvanX66\nNHp0T9eiccaOlTZv7uladJ8+FxgbNkjLl3f/fh5/XDrnnO7fTzlvvy2ZNW5/Z54p/cd/dF7urLOk\npUu3fj9Tpkgnnrj163fVhRdKF11UefnIkdKmTVJbW2372bhROumk2rZRbOpU6cYbG3fxmTEjnHcx\nRo4M78NNmzovO316OI5q0vP9oYfi9t+bTZwovfJKbdtobZX++Mf61Kfe+kRgrFyZjX/nO9Lee4fx\nKVOkD34wfjutrdXvpF9/XVq4MIxfd510+eWdb3PNmvCmuO66ymU2bQr7Lmfu3NILVrWL8pAhUkdH\n5/WqZuVKyT2u7N13Z+NXXBEuLFvrppukO+8M408+Ka1b1/k67e3S6tXSued2fX+dhe5dd0nNzdL7\n3ld4jqU2bZLuu6/yuqNGhfHly6WZM+PqdNNN0pgx4Zja2yuXS1/jRx4pnH/aaeFiMm5cmDarvp1Y\np50mzZnTebl99gnH/oEPSF/8Yvkyy5ZJRxyRTXd2vq5ZE/5edVX55W1t0rx5lddfvVp69tnq+9ha\n7e1Z/cq5//7S82yb3FX1T3+SXnwxjK9aFd53c+eGm4xKLrxQGjEilC13XkohsOfPD+OVztFu4e69\napDkkru7+157uX/5y+6S+1tvuV93nfvxx4fpxx8PfyX39evdV692X7MmjHd0hPU3bAjL7703TKfl\ni736qvuXvuT+jW+E5Q8+6H7OOeXLuruvW5eNf/KTlbe7fr37F77g/pGPFC5ftChsf/36MP/kk93H\njMnqkt/ezJnuL78cxjs6wvwLLgjTa9e6r1pVus9Fi9yfeiqUzdc1Jbkffrj7tttm01/9qntraxj/\nn/8J23j++cJ6S+4XX5xNz5rlPn586fanTXO//PJsuqPD/Te/CfuU3HfYIfzdeeesfp/6lPsNN7g/\n84z7H/7g/uijYb3zzsvaI31d8554wn3BgtL5aX0l9/b2UG79+mzZ3/xNtlxy32OP0vWvvbbyObDP\nPtmyJ57Ixsu1dyo9p9Lh0kvD/EmT3D/+8bDu9Onub77pfuqpocz8+dn6//APYd7RR2f7k9wXLnS/\n5x73iRPdL7sszH/uOffXXqtcl5SUvc4f/Wjp8pUrs/MvLZ8OQ4eGeUcc4X7LLdl7MN9ukvs221Sv\nw3PPhXKjR4fp9LWfOtV98eLsHHAP5/usWWF8wYKs7aXsvbJunfvtt4fz2T2cy5VeF8n9f/83jF96\naTj38q/5P/9zmL7vvmzehg3umzeH8fQ8cnc///ww/vLL4RhWrQrThxyS7evmm7P6btniPneu+4wZ\nhXX6+tfD8paW0vPvjTfcN21yP/fcwjYOl/IGXJ/rshFphKQlkp6SNLbM8qMlvS7p4WS4sMq23rk4\n5E/OzoaddnIfMiSMT5oUGnLRovJlf/e78HfkyHCC3313duFOy+QDo6PDva0tvGEnTw7zv/td9499\nzH348GydH/wgW2fSJPcbbyzc75YtYdn3vlf5OH75y2w8bYMRI0I4bNmSLdtrr8L1Zs0KF+lqbZS+\ncfPz8tOjR5dfb86cbN8XXZSdvOnyl18OZaZOdT/xxMJ129rcL7mker1+8Yvy8+fNK5y+7bbweuWD\nI78fd/dXXgnTl12WLcu/Rm++GS4e5fbX0ZEN11wTLuJSeEOfe25Yb7/9wg1Ifp0nnyx8vVasCG0i\nhRub4rqmw/HHh4vKUUdl01LYR3ohWrAgXLQ3by5df+bMzt8X6X4feiiUb2sLdfvUp9z/5V9Ky//k\nJ6Gd3bNjSC94//ZvhWV33DHb/qhR4e/gwdkFL11mlrXr88+7L10als2ZE+bdd19pPVavLp03e3Y2\nPnFiVod8mf33z8bPOsv9i1/MpvM3UfPmZefBlCnZTcwhh4S/b73lvnFj4bbHjAnnnxTO6RUr3A87\nLEz/6Eel9d1ll2x8/vzwd+TI0mOQQrjPnev+4ovZvGrXifz5HMbl3R0WyctZc1hsI+lpScMkDZS0\nSNK+ZQJjZuT2Om2kRgzpi3XnndXL5S9G6TBtWvmyhx+e3TluzZDe1dYyFIfot7+djX/6052vf+GF\npRe/9FNguSH91FLvYfx497FjC+fNmNH5ekcd5b799uWXDRyY3XSUG/Jv8HJD/oKWDkccEW4kvvvd\nrTvOmGOqNvzkJ1u3XltbNj54cOVz7+23w9/8hTAddt+9tO3T8TSMx4/vnvOj2jB0aPh75JGVy+Rv\nHvPDv/5r/epx3HH1PC41JDAsuUhvNTM7TNLF7j4ymR6XVH5CrszRkn7g7p+L2J5LtdUJlW2/vbR+\nfU/XAu8WAweG5/wHHig9+mhP16Y/M7l7t/9Uph5feu8qKf/VzKpkXrHDzWyRmd1uZvvVYb/YCoQF\n6in9wp2w6B8GNGg/CyXt4e5vmNlISf8l6SMN2jcAoA7qERgvSNojN71bMu8d7t6WG7/TzK40sx3d\n/dXym2zOjTclAwAgaEmGxqrHdxjvkbRU0jGSVkuaL+l0d1+cKzPE3VuT8eGSbnb3PStsj+8wAKBL\nGvMdRs2fMNx9i5mdJWmWwnci17r7YjM7Iyz2yZK+ZGbfltQu6U1Jp9a6XwBAY9X8CaPe+IQBAF3V\nd34lBQDoBwgMAEAUAgMAEIXAAABEITAAAFEIDABAFAIDABCFwAAAROkzgfGd7xRO57uATO23n3Rq\nN/4b8unTt37dCRM6L9NfDSjz/w387Gdbv71jj40vu+22W7+fWpU7h7uqWtfA5QwaVPs+a/XSS1u/\nbnNz18qvWhX+HnhgXNfG73tf6bxKXdF2xdSptW+jWNpFa0M1otONLnbI5L/+ddYxyJ/9Wfg7ebL7\nmWeGLhkXLsy6/fzHf8zKpr16SVl3llLorWzZstJuOYuHtOe9SkNxL4DleiyrNOQ7Hfrv/y5clu+0\nxyx0F5tOp92aFndaJIUOf2L2nXYFW8+huHOc/HDllVknNeWGs88unD7zzGy9gw4K4+3thW2X9nR4\n8MHuf/u32bK77qre1pWGBQtCF7Fnnhn2KxV2gLR2bdYNZuyQ9jpXbrjmGvff/z50r1munvnzOO3S\nV3L/1rdKt5X2GLl4cdaLXLmhuPOkj388dKWaP6+6Muy0U/ib9qhXrqMw96xXuuJh773D8nzPkV0d\n2tpCb4EHHFC67MMfLm3LtJvUgw4K+873jHfppaXv6XvuKd3u979fOm/gQPeHH46v99q1oYvp/Gvb\n2TBoUPj77LOlvVKefHI4nvRcCJfyPtDjXncEhnthn8mvvpp1b1rsjTeyRkx99rPZSTtxYmH5v/iL\n0hcm7dbRPVyA0gvYKacUlvOkxdIXfcmSyi/2qFFZ+c98Joxvt12YXrjQfc89Qz/af/d35Y8r3c4D\nD4S+xvPzJPef/jTrrSytb77MvHnut96azZ8xI/RdnC4///wQuPk3jLv7j3/sPmxYGP/hD8P8tF/j\ndJg4MTv2o44q3G/aVeqiRYX9F+eHq68uXGfOnPD3mmvC67lxY+Hyau3jnl3A0u44i9tq6tSs61bJ\n/YUXym/T3f2MMwr3OXhwtt7Pfx4u0mlXvPmL0jPPhPLF/XZLWZek+bqnbSy533RTOPa0/Ec/Gv7m\n+yrP9w63YEFWx6VLs/mnn1547GkQPvts+HvqqaEr33wb3XNP1hd1OhxzTLgoF3e36x56okzPowce\nyLoezZepFBipct0v77dfeJ8XdzO83XbZe3zy5MJ2PPbYMH/GjNAFbdr2kyZl669Z4/65z2XXgXyv\niTNnZu2QXhfcC8+VdBv56csuy/rhLj6O++/PehZ873tDV6/FyrXNggXh9dpzzzB96KGh+9Urrsj6\nDy/3frjttnS+3L0fB0ZLi/sNN5Q2drF8X8fF0jdxXtpPcb5j+fQNWrzNtF/o5cuzfqTnzw93C+mF\nIN13ejfgSas+/XQ2/p//mW13l13CCdmZ228P6+ZPOCmEz6xZ4WRascK9uTlcxNI3xOrV2QV35crS\ndvnVr0rnVWq/jo5Q53w/w2m55cvDeBrkgwe7v/566TZOOKFw3Wefzd4A6Zsj/cR1/fWF66b9JZdT\nXOf29lDf9vYwvWlTuKPNb3flytBW1cyenQW8eziH3v/+0nqkd/677VY4/623srvaSu0qhX6k03q7\nhxCVwvQ554Suf/O2bMnaLb/e4sWl+0mnp0wJfzs6wmu4cWN4X6Vlt9sua7fNm90ffDAsmz49LP+n\nf6p8HOlrmd9fWmbDhsJ5t9yS1Tc1ZYr7tdeG5Y88ki0vDpO1a7N9PPhgaVvmpTco6fEuWlRa5pVX\nQhvk6yO533hj4fWi+JjS13T//UvbYfz4rK3y+3nttfL1zL9m+fB3z27Oyhk2rHTZihXptuTeiOtz\nI3bSpQpVaq0qbr45NHSsY44JdzMLF4bp3/42vOipjo5wQSh3d5C68spw0u22W2jF224rXJa+uV97\nrfKno2rSO7c338zmSeHTU6z0JM/bsiXcjeVJhRejctITfO7cytsu5/Ofz9adNq1w2WOPhTdvGhgr\nV3a+veL6VJM+UtqwIX675Rx6aOUL/x57VK9f7Ol8/fXxZfPyn3KL993eHh6b5HV0lL7+lVQLjLzn\nnit8dJr6ylc6P6ZDDy3//pg+vfSYOguMrZUGRt7AgeGTycCBheXOPrt03WnTQt/m5QKq2j7TwM3f\nQLa3l7/xcs8CvVh4ckFg9AmbN29dIHQmvRDkTZqUhVyMjg73O+6oT32uvjo85spbvrzz9VpbwwVq\n9uzwpionDYyuOOOM8CmsmvTOuVbDh3d/YKSPeboqfY3zd8wXXOA+YULXt1Vs8WL3f//3uONIbwzy\nLrlk647JPTwJGDs2m+7uwJg9u3De5s3ZU4V8uTFjCueNG5d9Cuop4aaVwOj3Yh5dvRukPzborSoF\nxr33uj/6aPl1vvGN8AOG7g6MRij36K3YRReV1r/4U0KtdUg/3dZb7PtMCt/h9DarVzcuMPrMz2r7\nox137OkaNMbuu/d0Dao76yzpW98qnf/JT0oHHFB+nWuukdrapJaWbq1aQ5x3njR2bPUyzc3S5s2F\n8045RWpvr08dzj5b+tjH6rOtYrHvs0GDpOHDu6cOtRg6tHH76pUdKPW2OgHdbdOm8Fv9b36zp2uC\nvsisMR0oERgA0Mc1KjB4JAUAiEJgAACiEBgAgCgEBgAgCoEBAIhCYAAAohAYAIAoBAYAIAqBAQCI\nQmAAAKIQGACAKAQGACAKgQEAiEJgAACiEBgAgCgEBgAgCoEBAIhCYAAAohAYAIAoBAYAIEpdAsPM\nRpjZEjN7yszGVijzczNbZmaLzOwT9dgvAKBxag4MM9tG0i8lnSBpf0mnm9m+RWVGStrb3T8s6QxJ\nV9W6XwBAY9XjE8ZwScvc/Xl3b5c0XdJJRWVOknS9JLn7PEk7mNmQOuwbANAg9QiMXSWtzE2vSuZV\nK/NCmTIAgF5sQE9XoJzm5uZ3xpuamtTU1NRjdQGA3qalpUUtLS0N36+5e20bMDtMUrO7j0imx0ly\nd5+QK3OVpHvcfUYyvUTS0e7eWmZ7XmudAKA/MTO5u3X3furxSGqBpA+Z2TAzGyTpNEkzi8rMlDRK\neidgXi8XFgCA3qvmR1LuvsXMzpI0SyGArnX3xWZ2Rljsk939DjM70cyelrRR0uha9wsAaKyaH0nV\nG4+kAKBr+tIjKQBAP0BgAACiEBgAgCgEBgAgCoEBAIhCYAAAohAYAIAoBAYAIAqBAQCIQmAAAKIQ\nGACAKAQGACAKgQEAiEJgAACiEBgAgCgEBgAgCoEBAIhCYAAAohAYAIAoBAYAIAqBAQCIQmAAAKIQ\nGACAKAQGACAKgQEAiEJgAACiEBgAgCgEBgAgCoEBAIhCYAAAohAYAIAoBAYAIAqBAQCIQmAAAKIQ\nGACAKAQGACAKgQEAiDKglpXNbLCkGZKGSXpO0inuvq5MueckrZPUIand3YfXsl8AQOPV+gljnKQ5\n7r6PpLslXVChXIekJnc/iLAAgL6p1sA4SdLUZHyqpC9UKGd12BcAoAfVehHf2d1bJcnd10jauUI5\nlzTbzBaY2Tdr3CcAoAd0+h2Gmc2WNCQ/SyEALixT3Cts5kh3X21mH1AIjsXufn+XawsA6DGdBoa7\nH1dpmZm1mtkQd281s6GSXqqwjdXJ37Vmdquk4ZIqBkZzc/M7401NTWpqauqsmgDQb7S0tKilpaXh\n+zX3Sh8KIlY2myDpVXefYGZjJQ1293FFZf5c0jbu3mZm20maJekSd59VYZteS50AoL8xM7m7dft+\nagyMHSXdLGl3Sc8r/Kz2dTPbRdLV7v5ZM9tL0q0Kj6sGSLrR3cdX2SaBAQBd0CcCozsQGADQNY0K\nDH7qCgCIQmAAAKIQGACAKAQGACAKgQEAiEJgAACiEBgAgCgEBgAgCoEBAIhCYAAAohAYAIAoBAYA\nIAqBAQCIQmAAAKIQGACAKAQGACAKgQEAiEJgAACiEBgAgCgEBgAgCoEBAIhCYAAAohAYAIAoBAYA\nIAqBAQCIQmAAAKIQGACAKAQGACAKgQEAiEJgAACiEBgAgCgEBgAgCoEBAIhCYAAAohAYAIAoBAYA\nIAqBAQCIQmAAAKLUFBhm9iUze8LMtpjZwVXKjTCzJWb2lJmNrWWfAICeUesnjMclnSzp3koFzGwb\nSb+UdIKk/SWdbmb71rhfAECDDahlZXdfKklmZlWKDZe0zN2fT8pOl3SSpCW17BsA0FiN+A5jV0kr\nc9OrknkAgD6k008YZjZb0pD8LEku6Ufuflt3VKq5ufmd8aamJjU1NXXHbgCgT2ppaVFLS0vD92vu\nXvtGzO6RdK67P1xm2WGSmt19RDI9TpK7+4QK2/J61AkA+gszk7tX+2qgLur5SKpSZRdI+pCZDTOz\nQZJOkzSzjvsFADRArT+r/YKZrZR0mKQ/mNmdyfxdzOwPkuTuWySdJWmWpCclTXf3xbVVGwDQaHV5\nJFVPPJICgK7pi4+kAADvYgQGACAKgQEAiEJgAACiEBgAgCgEBgAgCoEBAIhCYAAAohAYAIAoBAYA\nIAqB0Yv1xH9f3BvRDhnaIkNbNB6B0YvxhghohwxtkaEtGo/AAABEITAAAFF65X9v3tN1AIC+phH/\nvXmvCwwAQO/EIykAQBQCAwAQpdcEhpmNMLMlZvaUmY3t6frUg5ntZmZ3m9mTZva4mX0vmT/YzGaZ\n2VIz+6OZ7ZBb5wIzW2Zmi83s+Nz8g83ssaR9/n9u/iAzm56s86CZ7dHYo+waM9vGzB42s5nJdL9s\nCzPbwcxuSY7tSTM7tB+3xQVJGzxmZjcmde8XbWFm15pZq5k9lpvXkGM3s68l5Zea2aioCrt7jw8K\nwfW0pGGSBkpaJGnfnq5XHY5rqKRPJOPvlbRU0r6SJkg6P5k/VtL4ZHw/SY9IGiBpz6RN0u+Z5kn6\n62T8DkknJOPflnRlMn6qpOk9fdydtMn3Jd0gaWYy3S/bQtJ1kkYn4wMk7dAf2yJ5zy+XNCiZniHp\na/2lLSQdJekTkh7Lzev2Y5c0WNIzyXn3/nS80/r2dIMllT9M0p256XGSxvZ0vbrhOP9L0rGSlkga\nkswbKmlJueOWdKekQ5Myf8rNP03SpGT8LkmHJuPvkbS2p4+zyvHvJmm2pCZlgdHv2kLS9pKeKTO/\nP7bF4OS4BycXwpn97T2iEJr5wOjOY3+puEwyPUnSqZ3Vtbc8ktpV0src9Kpk3ruGme2pcCcxV+Fk\naJUkd18jaeekWHE7vJDM21WhTVL59nlnHXffIul1M9uxWw6idpdLOk9S/qd5/bEt9pL0spn9Knk8\nN9nM/lz9sC3c/TVJP5W0QuG41rn7HPXDtsjZuRuPfV1y7JW2VVVvCYx3NTN7r6TfSBrj7m0qvGCq\nzHRNu6vjturGzD4jqdXdF6l6Hd/1baFwJ32wpCvc/WBJGxXuHvvjefGXCo8ph0n6oKTtzOwr6odt\nUUWvOfbeEhgvSMp/EbVbMq/PM7MBCmHxa3f/fTK71cyGJMuHSnopmf+CpN1zq6ftUGl+wTpm9h5J\n27v7q91wKLU6UtLnzWy5pJskfdrMfi1pTT9si1WSVrr7Q8n0bxUCpD+eF38l6QF3fzW5A75V0hHq\nn22RasSxb9U1t7cExgJJHzKzYWY2SOH52swerlO9TFF4vviz3LyZkr6ejH9N0u9z809Lftmwl6QP\nSZqffCxdZ2bDzcwkjSpa52vJ+Jcl3d1tR1IDd/+hu+/h7n+p8Pre7e5flXSb+l9btEpaaWYfSWYd\nI+lJ9cPzQuGHIIeZ2bbJMRwj6U/qX21hKrzzb8Sx/1HScRZ+rTdY0nHJvOp6+guf3JcuIxROnmWS\nxvV0fep0TEdK2qLwq69HJD2cHOeOkuYkxztL0vtz61yg8OuHxZKOz80/RNLjSfv8LDf//0m6OZk/\nV9KePX3cEe1ytLIvvftlW0g6UOFGaZGk3yn8WqW/tsV5CoH5mKSpCr+U7BdtIWmapBclva3wPc5o\nhR8AdPuxK4TSMklPSRoVU1/+axAAQJTe8kgKANDLERgAgCgEBgAgCoEBAIhCYAAAohAYAIAoBAYA\nIAqBAQCI8n/6g5sZC+n+8QAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x11944b9b0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#plt.plot(numpy.array(list(range(MC.data.nser))), MC.data.mser[0]-MC.data.mser[1])\n",
+    "plt.plot(numpy.array(list(range(MC.data.nser))), MC.data.eser)\n",
+    "#plt.plot(numpy.array(list(range(MC.data.nser))), numpy.power(MC.data.mser[0],2))\n",
+    "#plt.plot(numpy.array(list(range(MC.data.nser))), MC.data.mser[0]*MC.data.mser[1])\n",
+    "plt.ylim(-1.2,1.2);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0023197378"
+      ]
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 479,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 479,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 100\n",
+    "vari = numpy.var(MC.data.eser)\n",
+    "len(numpy.apply_along_axis(numpy.mean,1,MC.data.eser.reshape(MC.data.nser//k,k)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 527,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0014081466, 0.00017108455, 12.149626769826801, 1.7108455358538777e-06)"
+      ]
+     },
+     "execution_count": 527,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 100\n",
+    "N = MC.data.nser\n",
+    "NB = N//k\n",
+    "vari = numpy.var(MC.data.eser)\n",
+    "varB = numpy.var(numpy.apply_along_axis(numpy.mean,1,numpy.reshape(MC.data.eser,(NB,k))))\n",
+    "vari, varB, k*varB/vari, varB/NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 528,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0014081466, 1.7281149151671116e-06, 12.272265844369343)"
+      ]
+     },
+     "execution_count": 528,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 100\n",
+    "N = MC.data.nser\n",
+    "NB = N//k\n",
+    "vari = numpy.var(MC.data.eser)\n",
+    "avgB = numpy.apply_along_axis(numpy.mean,1,numpy.reshape(MC.data.eser,(MC.data.nser//k,k)))\n",
+    "avg = numpy.mean(avgB)\n",
+    "var = (NB-1)*numpy.var((N*avg-k*avgB)/(N-k))\n",
+    "vari, var, N*var/vari"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000"
+      ]
+     },
+     "execution_count": 442,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(MC.data.eser)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[136 120] 5747.92\n",
+      "[0 1 1 0 0 0 1 0 1 0 1 0 0 0 0 0]\n",
+      "[1 0 0 1 1 1 1 0 0 0 0 1 1 0 1 0]\n",
+      "[0 1 0 0 1 1 0 1 0 1 0 0 0 1 0 0]\n",
+      "[1 1 0 0 1 1 0 1 0 1 1 0 0 1 1 1]\n",
+      "[1 0 1 0 1 1 0 0 0 1 0 0 1 0 0 0]\n",
+      "[1 0 0 1 1 0 1 0 1 1 0 1 1 0 0 1]\n",
+      "[1 1 1 1 0 0 1 0 1 1 0 1 0 1 0 0]\n",
+      "[0 0 0 1 1 1 0 0 1 0 0 1 1 1 0 0]\n",
+      "[1 0 0 1 0 0 0 0 1 0 1 1 1 0 1 1]\n",
+      "[0 0 0 0 0 1 0 1 0 1 0 1 1 1 1 1]\n",
+      "[1 1 0 0 0 0 0 0 1 1 0 0 0 0 1 0]\n",
+      "[0 1 0 1 1 0 1 1 0 0 1 0 1 1 0 1]\n",
+      "[1 1 1 1 1 0 1 0 0 1 0 0 1 0 0 1]\n",
+      "[0 0 1 1 1 0 1 0 1 0 1 0 1 0 0 1]\n",
+      "[1 1 0 1 0 0 1 0 1 0 0 0 1 0 1 0]\n",
+      "[0 0 0 1 0 0 1 0 1 1 0 0 1 0 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mdl.hist,'%0.2f'%(mdl.action/mdl.beta))\n",
+    "for x in range(mdl.lattice.L):\n",
+    "    print(mdl.config[[mdl.lattice[(x,y)].index for y in range(mdl.lattice.L)]])"
    ]
   },
   {
@@ -764,7 +975,7 @@
     "mdl = LatticeModel(SquareLattice(10,[1.]),Group(2))\n",
     "#MC.core.seed(24)\n",
     "mdl.beta = 0.7\n",
-    "mdl.run(1000,1)\n",
+    "mdl.run(1000)\n",
     "print(mdl.hist,'%0.2f'%(mdl.action/mdl.beta))\n",
     "for x in range(mdl.lattice.L):\n",
     "    print(mdl.config[[mdl.lattice[(x,y)].index for y in range(mdl.lattice.L)]])\n",
@@ -852,7 +1063,7 @@
    "source": [
     "mdl = LatticeModel(HypertreeLattice(4,[1.,0.2]),Group(3)).run(100)\n",
     "for k in range(10):\n",
-    "    mdl.run(mode = 1)\n",
+    "    mdl.run()\n",
     "    print(mdl.config,mdl.hist,mdl.energy)\n",
     "mdl.measure(1000,monitor=[0,1,2,3])"
    ]
