--- a/MonteCarlo.ipynb
+++ b/MonteCarlo.ipynb
@@ -936,6 +936,567 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%run 'MonteCarlo.py'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%run 'MonteCarlo.py'\n",
+    "platform = Platform(LatticeModel(SquareLattice(16,[1.]),Group(2))).tempering(0.1,1.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "platform.save('SL16S2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "platform = Platform().load('SL16S2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Platform at 0x109df5eb8>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "platform.refine(0.0000001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[36765,\n",
+       " 41349,\n",
+       " 44126,\n",
+       " 47949,\n",
+       " 54425,\n",
+       " 61648,\n",
+       " 77247,\n",
+       " 122996,\n",
+       " 157680,\n",
+       " 138756,\n",
+       " 65325,\n",
+       " 35614,\n",
+       " 20789,\n",
+       " 8077,\n",
+       " 3533]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[collection.nts for collection in platform.collections]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def fe1(ets,mts):\n",
+    "    return ets\n",
+    "def fe2(ets,mts):\n",
+    "    return ets**2\n",
+    "data = []\n",
+    "for beta in numpy.linspace(0.,1.6,512):\n",
+    "    a, v = platform.expect(beta,fe1)\n",
+    "    data.append([float(beta),a,v])\n",
+    "export('e1s',data)\n",
+    "data = []\n",
+    "for beta in numpy.linspace(0.,1.6,512):\n",
+    "    a, v = platform.expect(beta,fe2)\n",
+    "    data.append([float(beta),a,v])\n",
+    "export('e2s',data)\n",
+    "export('platform16', [[collection.beta, collection.ets.tolist()] for collection in platform.collections])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1226641473492691"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta = 0.855\n",
+    "(platform.expect(beta,fe2)[0]-platform.expect(beta,fe1)[0]**2)*platform.model.nsite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 468,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.001824219444969799"
+      ]
+     },
+     "execution_count": 468,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection = platform.collections[0]\n",
+    "beta = collection.beta\n",
+    "collection.reweight(beta,fe2)[0]-collection.reweight(beta,fe1)[0]**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 532,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['evar', 'eavg', 'state', 'stepsize', 'mts', 'erng', 'ets', 'nts', 'beta']"
+      ]
+     },
+     "execution_count": 532,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = collection.__dict__\n",
+    "[k for k in data.keys() if k is not 'model']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.10000000149011612,\n",
+       " 0.2750000059604645,\n",
+       " 0.36250001192092896,\n",
+       " 0.45000001788139343,\n",
+       " 0.5375000238418579,\n",
+       " 0.625,\n",
+       " 0.7124999761581421,\n",
+       " 0.800000011920929,\n",
+       " 0.84375,\n",
+       " 0.8875000476837158,\n",
+       " 0.9750000238418579,\n",
+       " 1.0625,\n",
+       " 1.149999976158142,\n",
+       " 1.3250000476837158,\n",
+       " 1.5]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "betas = [collection.beta for collection in platform.collections]\n",
+    "betas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "beta = 0.2\n",
+    "for c0, c1 in zip(platform.collections,platform.collections[1:]):\n",
+    "    print(c0.beta<= beta <= c1.beta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'beta': 0.45000001788139343,\n",
+       " 'eavg': 0.75190014,\n",
+       " 'erng': (0.64815233173308673, 0.85564794120850263),\n",
+       " 'ets': array([ 0.93749982,  0.78124988,  0.84374988, ...,  0.62499827,\n",
+       "         0.65624821,  0.90624815], dtype=float32),\n",
+       " 'evar': 0.010763607,\n",
+       " 'model': <__main__.LatticeModel at 0x108ebb668>,\n",
+       " 'mts': array([[ 0.5     ,  0.546875,  0.484375, ...,  0.6875  ,  0.5     ,\n",
+       "          0.515625],\n",
+       "        [ 0.5     ,  0.453125,  0.515625, ...,  0.3125  ,  0.5     ,\n",
+       "          0.484375]], dtype=float32),\n",
+       " 'nts': 1677,\n",
+       " 'state': {'action': 26.099946975708008,\n",
+       "  'beta': 0.45000001788139343,\n",
+       "  'config': array([0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0,\n",
+       "         0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1,\n",
+       "         0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1], dtype=int32),\n",
+       "  'hist': array([31, 33], dtype=int32)},\n",
+       " 'stepsize': 2}"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "platform.collections[2].__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24858.119140625, 172049904.0, 755882655744.0, 45711898968064.0, 1110565978112.0, 17124566.0, 556.36492919921875]\n",
+      "[0.20019772322927459, 8042.74609375, 24137768.0, 4463283200.0, 1232446080.0, 422084.09375, 153.27719116210938]\n",
+      "[1.8734360366370683e-05, 2.4021299434822663e-05, 2441.31689453125, 730238.375, 1534343.5, 11554.66015625, 45.155849456787109]\n",
+      "[3.4633062055284154e-09, 1.1151991001790626e-08, 8.2001754027086694e-09, 331.2716064453125, 2606.789794921875, 390.55081176757812, 14.778817176818848]\n",
+      "[9.6311442133792265e-13, 2.3942168955775753e-11, 1.7481217189731905e-11, 1.0954112921762199e-11, 14.288555145263672, 20.750816345214844, 5.6588706970214844]\n",
+      "[3.3217033894806766e-16, 1.0203229860873033e-13, 1.4622869181455315e-13, 4.5870277655829724e-13, 5.5968500879360315e-14, 2.7208333015441895, 2.6763970851898193]\n",
+      "[1.2832543650185681e-19, 5.0617113034998582e-16, 2.3037395095799469e-15, 6.0402174453054758e-14, 1.9186468899089638e-14, 1.1886254768694466e-16, 1.6030721664428711]\n",
+      "[2.2501775366689425e-26, 1.3543387028692871e-20, 9.1300736409939438e-19, 2.4075220084892929e-15, 9.8435088693971098e-15, 6.4185933944121628e-17, 6.7566667829447497e-20]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/site-packages/ipykernel/__main__.py:13: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "/usr/local/lib/python3.5/site-packages/ipykernel/__main__.py:15: RuntimeWarning: invalid value encountered in true_divide\n"
+     ]
+    }
+   ],
+   "source": [
+    "for collection in platform.collections:\n",
+    "    collection.Z = 1.0\n",
+    "for k in range(1):\n",
+    "    Zerr = []\n",
+    "    for collection0 in platform.collections:\n",
+    "        beta0 = collection0.beta\n",
+    "        Z0s = []\n",
+    "        ws = []\n",
+    "        for collection1 in platform.collections:\n",
+    "            if collection1 is not collection0:\n",
+    "                r, v = collection1.reweight(f, beta0)\n",
+    "                Z0s.append(r*collection1.Z)\n",
+    "                ws.append(1/v)\n",
+    "        ws = numpy.array(ws)\n",
+    "        ws = ws/ws.sum()\n",
+    "        print(Z0s)\n",
+    "        Z0_new = numpy.average(Z0s, weights=ws)\n",
+    "        Z0 = collection0.Z\n",
+    "        Zerr.append((Z0_new-Z0)/Z0)\n",
+    "        collection0.Z = Z0_new\n",
+    "    if numpy.var(Zerr)<1.e-8:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-8.56140172338818\n",
+      "1.6084497846456731\n",
+      "10.885151266273088\n",
+      "19.481042153277762\n",
+      "27.668604172573957\n",
+      "35.64088376742986\n",
+      "43.49971744290027\n",
+      "nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "for collection in platform.collections:\n",
+    "    print(-math.log(collection.Z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 0.0)"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "platform.collections[1].reweight(f,0.45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.6365830043177994e-08"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n=16\n",
+    "numpy.var([d.mean() for d in numpy.array_split(data,n)],ddof=1)/n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numpy.full(10,1.).min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def f(ets, mts):\n",
+    "    return ets**0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.18232155679395459"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numpy.log(1.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2. ,  1. ],\n",
+       "       [ 1.5, -0.5]])"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numpy.linalg.inv(numpy.array([[1., 2.], [3., 4.]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
